# AquaAero

./: CMakeLists.txt  emulator.cpp  emulator.h  gui.cpp  main.cpp
.github/workflows/: build.yml
